; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/spl/extr_spl-generic.c_ddi_copyout.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/spl/extr_spl-generic.c_ddi_copyout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FKIOCTL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ddi_copyout(i8* %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @FKIOCTL, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %4
  %15 = load i8*, i8** %7, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = load i64, i64* %8, align 8
  %18 = call i32 @memcpy(i8* %15, i8* %16, i64 %17)
  store i32 0, i32* %5, align 4
  br label %24

19:                                               ; preds = %4
  %20 = load i8*, i8** %6, align 8
  %21 = load i8*, i8** %7, align 8
  %22 = load i64, i64* %8, align 8
  %23 = call i32 @copyout(i8* %20, i8* %21, i64 %22)
  store i32 %23, i32* %5, align 4
  br label %24

24:                                               ; preds = %19, %14
  %25 = load i32, i32* %5, align 4
  ret i32 %25
}

declare dso_local i32 @memcpy(i8*, i8*, i64) #1

declare dso_local i32 @copyout(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
